CICO-41811 - Style update and layout issue fixes

--- a/zest_station/css/themes/row-nyc/theme.less
+++ b/zest_station/css/themes/row-nyc/theme.less
@@ -51,18 +51,12 @@
 	#row-nyc {
 
 		#header {
-			height: 160px;
-
-			.button {
-				margin-top: 20px;
-				margin-bottom: auto;
-			}
+			height: 133px;
 		}
 
 		#main {
-			#calc > #height > .remove(100%, 160px);
-			top: 160px;
-			padding-top: 50px;
+			#calc > #height > .remove(100%, 133px);
+			top: 133px;
 		}
 
 		#actions {
@@ -77,14 +71,11 @@
 			}
 		}
 
-		.button.transparent {
-			 
+		.button.transparent { 
 			background-color: fade(@white, 40);
 		}
 		 
 		#logo {
-			padding-top: 80px;
-
 			.logo {
 				.size(133px, auto);
 			}
@@ -110,7 +101,4 @@
 				}
 			}
 		}
-
-		
-		
 	}
